--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="http://claudiobagnato.com"><img  style="height:82px" src="/images/FL-logo.png"></a>
+<nav class="navbar navbar-sticky-top navbar-expand-lg navbar-dark bg-dark my-0">
+  <a class="navbar-brand" href="http://claudiobagnato.com"><img  style="height:82px;width:auto;" src="/images/FL-logo.png"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
