--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-sticky-top navbar-expand-lg navbar-dark bg-dark my-0">
-  <a class="navbar-brand" href="http://claudiobagnato.com"><img  style="height:82px;width:auto;" src="/images/FL-logo.png"></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-default fixed-top navbar-expand-lg navbar-dark bg-dark my-0">
+  <a class="navbar-brand" href="http://claudiobagnato.com"><img  style="height:82px;width:auto;" src="/images/FL-logo-fucked.png"></a>
+  <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
@@ -29,9 +29,9 @@
         <a class="nav-link disabled" href="#">Mobile</a>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    <form class="form-inline my-2 my-lg-0" ng-submit="alert()">
+      <input class="form-control mr-sm-2" type="search" placeholder="scrivi qualcosa..." aria-label="Search">
+      <button class="btn btn-success my-2 my-sm-0" type="button" ><i class="fa fa-search"></i></button>
     </form>
   </div>
 </nav>
